# Distributed-Scoring-Architecture

./: .gitignore  LICENSE  README.md  docker-compose.yml  env.example
.github/workflows/: ci.yml
backend/: Dockerfile  package-lock.json  package.json  tsconfig.json
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  cookie.helper.ts  csrf.guard.ts  jwt.strategy.ts
backend/src/carriers/: carriers.controller.ts  carriers.module.ts  carriers.service.ts
backend/src/ccf/: ccf.module.ts
backend/src/health/: health.controller.ts  health.module.ts  health.service.ts
backend/src/shared/: shared.module.ts
backend/test/integration/: ccf-upload.integration.spec.ts
backend/test/unit/: auth.service.spec.ts  cache.service.spec.ts  carriers.repository.spec.ts  ccf.processor.spec.ts
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: auth.spec.ts  carriers.spec.ts  upload.spec.ts
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/__tests__/components/: Badge.test.tsx  (+4 more)
sample-data/: payload-modified.json  payload.json
scoring-worker/: Dockerfile  pyproject.toml  ruff.toml
scoring-worker/src/: __init__.py  main.py
scoring-worker/src/hashing/: __init__.py  service.py
scoring-worker/src/routes/: __init__.py  health.py  score.py
scoring-worker/src/scoring/: __init__.py  constants.py  models.py  service.py
scoring-worker/tests/: __init__.py  test_hashing.py  test_routes.py  test_scoring.py
shared-contracts/: api-contracts.ts
(+70 files in other folders)
